<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_return_name"
            style="@style/BlackEditText"
            android:drawableLeft="@drawable/regreso"
            android:hint="@string/text1" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_truck"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/tipocamion"
            android:drawableRight="@drawable/next"
            android:hint="@string/text2" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_regresos_description"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/descripcion"
            android:hint="@string/text3" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_date_sales"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/calendario"
            android:focusable="false"
            android:hint="@string/text4" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_date_arrival"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/calendario"
            android:focusable="false"
            android:hint="@string/text5" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_start_route"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ruta"
            android:hint="@string/text6" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_end_route"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ruta"
            android:hint="@string/text8" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_capacity_top"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/capacidad"
            android:drawableRight="@drawable/next"
            android:focusable="false"
            android:hint="@string/text7" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_capacity_end"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/capacidad"
            android:drawableRight="@drawable/next"
            android:focusable="false"
            android:hint="@string/text9" />

        <com.regresos.utils.CustomEditText
            android:id="@+id/et_city_spend"
            style="@style/BlackEditText"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ciudades"
            android:drawableRight="@drawable/next"
            android:hint="@string/text10" />

        <com.regresos.utils.CustomFontButton
            android:id="@+id/btn_submit_regresos"
            style="@style/CustomButton"
            android:layout_marginTop="10dp"
            android:text="@string/text11" />
    </LinearLayout>

</ScrollView>