<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.regresos"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/image_registro" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.regresos.utils.CustomFontTextView
                style="@style/BlackTextBold"
                android:text="@string/information_general" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line"
                android:orientation="vertical"
                android:padding="5dp" >

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_full_name"
                    style="@style/BlackEditText"
                    android:drawableLeft="@drawable/nombre"
                    android:hint="@string/hint_profile_name"
                    android:inputType="textCapWords" />

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_email"
                    style="@style/BlackEditText"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/mail"
                    android:hint="@string/hint_profile_email"
                    android:inputType="textEmailAddress" />

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_tele"
                    style="@style/BlackEditText"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/telefono"
                    android:hint="@string/hint_profile_tele"
                    android:inputType="number"
                    android:maxLength="10" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.regresos.utils.CustomFontTextView
                style="@style/BlackTextBold"
                android:text="@string/acc_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line"
                android:orientation="vertical"
                android:padding="5dp" >

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_des_name"
                    style="@style/BlackEditText"
                    android:drawableLeft="@drawable/nombre"
                    android:hint="@string/hint_profile_name1"
                    android:inputType="textCapWords" />

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_description"
                    style="@style/BlackEditText"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/descripcion"
                    android:hint="@string/hint_profile_des"
                    android:inputType="textCapSentences" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.regresos.utils.CustomFontTextView
                style="@style/BlackTextBold"
                android:text="@string/direction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line"
                android:orientation="vertical"
                android:padding="5dp" >

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_office"
                    style="@style/BlackEditText"
                    android:drawableLeft="@drawable/oficina"
                    android:hint="@string/profile_office"
                    android:inputType="textCapWords" />

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_street"
                    style="@style/BlackEditText"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/direccion"
                    android:hint="@string/street_no"
                    android:inputType="textCapSentences" />

                <Spinner
                    android:id="@+id/spn_pro_know"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_bg"
                    android:drawableLeft="@drawable/descripcion"
                    android:entries="@array/arr_how_know"
                    android:padding="10dp" />

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_tele2"
                    style="@style/BlackEditText"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/telefono"
                    android:hint="@string/profile_tele1"
                    android:inputType="number"
                    android:maxLength="10" />

                <com.regresos.utils.CustomEditText
                    android:id="@+id/edit_pro_radio"
                    style="@style/BlackEditText"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/radio"
                    android:hint="@string/radio"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <com.regresos.utils.CustomFontButton
            android:id="@+id/btn_save_profile"
            style="@style/CustomButton"
            android:layout_marginTop="10dp"
            android:text="@string/btn_save_profile" />
    </LinearLayout>

</ScrollView>